# alpha-arena

./: .gitignore  README.md  ROAD_MAP.md  pyproject.toml
.github/: copilot-instructions.md  copilot-instructions.md.bak
docs/: GatedDeltaNet.md  copilot-project-context.md
src/alpha_arena/cli/: main.py
src/alpha_arena/data/: __init__.py  ingest_baostock.py  ingest_tushare.py  loader.py
src/alpha_arena/data/helpers/: baostock_helper.py  tushare_helper.py
src/alpha_arena/features/: base_features.py  builder.py  config.py  date_encoder.py  indicators.py  llm.py  llm2.py  pipeline.py  selector.py  ta_features.py  targets.py  utils.py
src/alpha_arena/models/: aedh_lstm.py  amc_lstm.py  amc_lstm.py.bak
src/alpha_arena/train/: ddp.md  main.py  trainer.py
src/alpha_arena/train/dataset/: __init__.py  builder.py  loader.py
src/alpha_arena/utils/: __init__.py  logging_utils.py
src/notebooks/: train_aedh_lstm.ipynb  train_aedh_lstm.py
src/tests/data/: test_ingest_tushare.py
src/tests/featrues/: test_builder.py
src/tests/train/dataset/: test_dataset_builder.py
